force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <label>Referral  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>