force-app/main/default/objects/Referral__c/fields/Doctors_Provider__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Provider__c</fullName>
    <formula>Referring_Doctor__r.Provider_Number__c</formula>
    <label>Doctors Provider</label>
    <type>Text</type>
</CustomField>