force-app/main/default/objects/Referral__c/fields/Referral_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Referral_Expiry__c</fullName>
    <formula>IF( TEXT(Referral_Length__c ) = &quot;Indefinite&quot;, ADDMONTHS(Referral_Date__c,100), 
IF( TEXT(Referral_Length__c ) = &quot;12 Months&quot;,ADDMONTHS(Referral_Date__c,12),
ADDMONTHS( Referral_Date__c ,VALUE(LEFT(TEXT(Referral_Length__c),1)))))</formula>
    <label>Referral Expiry</label>
    <type>Date</type>
</CustomField>