force-app/main/default/objects/Referral__c/fields/Referral_Length__c.field-meta.xml
<CustomField>
    <fullName>Referral_Length__c</fullName>
    <label>Referral Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>Indefinite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>