force-app/main/default/objects/Referral__c/fields/Valid_Referral__c.field-meta.xml
<CustomField>
    <fullName>Valid_Referral__c</fullName>
    <formula>IF(Patient__r.Account.Household_Clinic__r.Name = &apos;Create Fertility&apos;,(IF( Referral_Expiry__c &gt;  TODAY() +30, True,False)), (IF( Referral_Expiry__c &gt;  TODAY() +30, True,False)))</formula>
    <label>Valid Referral</label>
    <type>Checkbox</type>
</CustomField>