force-app/main/default/objects/Referral__c/validationRules/Inactive_Doctor.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Doctor</fullName>
    <active>true</active>
    <errorConditionFormula>Referring_Doctor__r.Inactive__c = TRUE</errorConditionFormula>
    <errorMessage>This Doctor is Inactive</errorMessage>
</ValidationRule>